tests/transpiler/x/hs/dataset_where_filter.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (age, is_senior, name)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
data GenType1 = GenType1
  { name :: String,
    age :: Int
  } deriving (Show)


data GenType2 = GenType2
  { name :: String,
    age :: String,
    is_senior :: Bool
  } deriving (Show)


adults = [GenType2 {name = person.name, age = person.age, is_senior = person.age >= 60} | person <- people, person.age >= 18]

people = [GenType1 {name = "Alice", age = 30}, GenType1 {name = "Bob", age = 15}, GenType1 {name = "Charlie", age = 65}, GenType1 {name = "Diana", age = 45}]

main :: IO ()
main = do
    putStrLn ("--- Adults ---")
    mapM_ (\person -> do
        putStrLn (show person.name ++ "is" ++ show person.age ++ if person.is_senior then " (senior)" else "")
        ) adults
